<resources>
    <string name="app_name">My Application</string>
    <string name="logo">Ví Của Chúng Ta</string>
    <string name="enter_name">Nhập tên người dùng</string>
    <string name="wallet_id">Nhập ID ví</string>
    <string name="wallet_pass">Nhập mật khẩu ví</string>
    <string name="connect">Kết nối</string>
    <string name="create_new">Tạo ví mới</string>
    <string name="create">Tạo mới</string>
    <string name="repeat_pass">Nhập lại mật khẩu</string>
    <string name="choose_date">Chọn ngày để lọc</string>
    <string name="enter_content">Nhập nội dung</string>
    <string name="enter_payMemberName">Nhập tên người chi trả</string>
    <string name="create_wallet_logo">Tạo Ví</string>
    <string name="enter_value">Nhập sô tiền</string>
    <string name="enter_date">Chọn ngày</string>
    <string-array name="options">
        <item>Thu</item>
        <item>Chi</item>
    </string-array>
</resources>
