<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_wallet_logo"
        android:textColor="@color/blue_logo"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="70dp"/>

    <EditText
        android:padding="8dp"
        android:id="@+id/edt_enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_name"
        android:textSize="20sp"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:padding="8dp"
        android:id="@+id/edt_enterPass"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_enterName"
        android:layout_marginTop="30dp"
        android:hint="@string/wallet_pass"
        android:textSize="20sp"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:padding="8dp"
        android:id="@+id/edt_repeatPass"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:textSize="20sp"
        android:hint="@string/repeat_pass"
        android:layout_below="@id/edt_enterPass"/>

    <Button
        android:id="@+id/btn_create"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edt_repeatPass"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_button"/>

</RelativeLayout>